<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BqEvernote</string>
    <string name="welcome">Bievenido</string>
    <string name="login_with_evernote">Accede con Evernote</string>
    <string name="action_settings">Configuración</string>
    <string name="login_error">Upps! Login fallido !!</string>
    <string name="title_activity_notes">Notas</string>
    <string name="all_notes">Notas</string>
    <string name="title_new_note">Nueva nota</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="note_list_sort_name">Ordena por nombre</string>
    <string name="note_list_sort_date">Ordena por fecha</string>
    <string name="title_activity_view_note">Ver Nota</string>
    <string name="notes_loading">Cargando notas...</string>
    <string name="notes_note_loading">Cargando contenido...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_note_title_hint">título de la nota</string>
    <string name="new_note_content_hint">contenido de la nota</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="create_note_data_error">Introduce un título y contenido para la nota por favor</string>
    <string name="new_note_saving">Guardando...</string>
    <string name="logout">Cerrar sesión</string>
    <string name="to_handwrite">Escribir a mano</string>
    <string name="title_activity_hand_write">HandWriteActivity</string>
    <string name="handwrite_process">Procesar</string>
    <string name="handwrite_clear">Borrar</string>
    <string name="notes_note_handwrite_recog">Procesando texto...</string>

</resources>
