<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="amcereijo.com.bqevernote.notes.newnote.NewNoteFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText android:id="@+id/new_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_note_title_hint"/>

        <View android:id="@+id/new_note_title_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_below="@id/new_note_title"/>


        <LinearLayout android:id="@+id/new_note_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:weightSum="2">
            <Button android:id="@+id/new_note_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"
                android:onClick="saveNote"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:onClick="cancelNote"/>
        </LinearLayout>


        <EditText android:id="@+id/new_note_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/new_note_title_separator"
            android:layout_above="@id/new_note_buttons"
            android:hint="@string/new_note_content_hint"
            android:gravity="top|left"/>



    </RelativeLayout>

</FrameLayout>
