<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context="amcereijo.com.bqevernote.notes.newnote.HandWriteActivity">

    <ImageView android:id="@+id/handwrite_imageview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"/>

    <RelativeLayout android:id="@+id/handwrite_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button android:id="@+id/handwrite_processbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/handwrite_process"
            android:onClick="processHandWrite"/>

        <LinearLayout android:id="@+id/handwrite_subbuttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/handwrite_processbutton"
            android:weightSum="2">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/handwrite_clear"
                android:onClick="clearHandWrite"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:onClick="cancelHandWrite"/>
        </LinearLayout>

    </RelativeLayout>





</RelativeLayout>
